--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="question_hint">Create question to restore your account</string>
     <string name="answer_hint">Create answer for secret your question</string>
     <string name="create_account_button_title">Create Account</string>
+    <string name="site_page_title">Sites</string>
+    <string name="credits_page_title">Credits</string>
+    <string name="notes_page_title">Notes</string>
 </resources>
