RecyclerViews for MainContainer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
     <string name="site_page_title">Sites</string>
     <string name="credits_page_title">Credits</string>
     <string name="notes_page_title">Notes</string>
+    <string name="site_account_name">Site name</string>
+    <string name="site_account_login">Site Login</string>
+    <string name="site_account_password">Site Password</string>
+    <string name="credit_account_name">Bank name</string>
+    <string name="credit_account_number">Credit card number</string>
+    <string name="expired_date">Expired date</string>
+    <string name="credit_account_month">Month</string>
+    <string name="credit_account_year">Year</string>
+    <string name="credit_account_cww">CWW</string>
+    <string name="note_description">Description</string>
+    <string name="note_title">Title</string>
+    <string name="empty_warning">Check that all fields are filled</string>
 </resources>
